--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.gitignore.io/api/osx,python
 # Edit at https://www.gitignore.io/?templates=osx,python
 
+*\venv
+
 ### OSX ###
 # General
 .DS_Store
